--- a/a_cifarTf2.ipynb
+++ b/a_cifarTf2.ipynb
@@ -99,7 +99,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OHXF8jiBh8kH",
-        "outputId": "b9319ee3-d5a4-4afe-96b4-11bfd71c16bf"
+        "outputId": "33055f4c-6db0-4f1b-9edb-f748b863b278"
       },
       "source": [
         "from google.colab import drive\n",
@@ -137,7 +137,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5eagecphv4k_",
-        "outputId": "6a1d7b98-4b90-4df2-d4d3-98b4a67c93cb"
+        "outputId": "dfda6dd8-b866-4800-d810-7d1e4282318d"
       },
       "source": [
         "(x_train, y_train), (x_test, y_test) = K.datasets.cifar10.load_data()"
@@ -148,7 +148,7 @@
           "output_type": "stream",
           "text": [
             "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
-            "170500096/170498071 [==============================] - 6s 0us/step\n"
+            "170500096/170498071 [==============================] - 8s 0us/step\n"
           ],
           "name": "stdout"
         }
@@ -408,6 +408,7 @@
         "id": "aSEe-231jn49"
       },
       "source": [
+        "\n",
         "# (x_train, y_train,), (x_test, y_test) = K.datasets.mnist.load_data()\n",
         "# print(x_train.shape, x_test.shape)"
       ],
@@ -422,7 +423,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UnmSudqTMlPX",
-        "outputId": "4072467b-54f0-4419-932d-521a2964c2bb"
+        "outputId": "f06684fc-2194-4b89-b7e6-fa401dc5462a"
       },
       "source": [
         "class Model:\n",
@@ -476,7 +477,7 @@
         "m = Model.build()\n",
         "print(m.summary())\n"
       ],
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -852,11 +853,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9s6YoXJtBHBB",
-        "outputId": "94ca8872-1b94-49a4-e441-c31b290ec688",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9s6YoXJtBHBB",
+        "outputId": "94ca8872-1b94-49a4-e441-c31b290ec688"
       },
       "source": [
         "m3 = Model.build()\n",
@@ -977,11 +978,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VJHRLy9Ne5xg",
-        "outputId": "c041beb9-5584-40b3-9fa2-f03b5fdf016b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VJHRLy9Ne5xg",
+        "outputId": "c041beb9-5584-40b3-9fa2-f03b5fdf016b"
       },
       "source": [
         "m4 = Model.build()\n",
@@ -1062,38 +1063,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eBZ812MLhXQl"
-      },
-      "source": [
-        "from keras.callbacks import ModelCheckpoint, CSVLogger\n",
-        "comparison_metric = MyAccuracy()\n",
-        "#checkpoint_filepath = \"/content/drive/MyDrive/Weights/weights-improvement-{epoch:02d}-{val_my_accuracy:.2f}.hdf5\"\n",
-        "model_checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(\n",
-        "        filepath = \"/content/drive/MyDrive/WeightsCifar10/best_weights5.hdf5\",\n",
-        "        save_weights_only=True,\n",
-        "        monitor=f\"val_{comparison_metric.name}\",\n",
-        "        mode='max',\n",
-        "        save_best_only=True)\n",
-        "model_checkpoint_callback2 = tf.keras.callbacks.ModelCheckpoint(\n",
-        "        filepath = \"/content/drive/MyDrive/WeightsCifar10/latest_weights5.hdf5\",\n",
-        "        save_weights_only=True,\n",
-        "        monitor=f\"val_{comparison_metric.name}\",\n",
-        "        mode='max',\n",
-        "        save_best_only=False)\n",
-        "log_csv = CSVLogger(\"/content/drive/MyDrive/WeightsCifar10/mylogs5.csv\", separator = \",\", append = False)\n",
-        "callback_list = [model_checkpoint_callback, model_checkpoint_callback2, log_csv]"
-      ],
-      "execution_count": 29,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "yOeKtf6aVb99",
-        "outputId": "ff6e95a6-59f2-40ea-aebc-a5400b94e9ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yOeKtf6aVb99",
+        "outputId": "ff6e95a6-59f2-40ea-aebc-a5400b94e9ff"
       },
       "source": [
         "m5 = Model.build()\n",
@@ -1210,14 +1184,166 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "eBZ812MLhXQl"
+      },
+      "source": [
+        "from keras.callbacks import ModelCheckpoint, CSVLogger\n",
+        "comparison_metric = MyAccuracy()\n",
+        "#checkpoint_filepath = \"/content/drive/MyDrive/Weights/weights-improvement-{epoch:02d}-{val_my_accuracy:.2f}.hdf5\"\n",
+        "model_checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(\n",
+        "        filepath = \"/content/drive/MyDrive/WeightsCifar10/best_weights6.hdf5\",\n",
+        "        save_weights_only=True,\n",
+        "        monitor=f\"val_{comparison_metric.name}\",\n",
+        "        mode='max',\n",
+        "        save_best_only=True)\n",
+        "model_checkpoint_callback2 = tf.keras.callbacks.ModelCheckpoint(\n",
+        "        filepath = \"/content/drive/MyDrive/WeightsCifar10/latest_weights6.hdf5\",\n",
+        "        save_weights_only=True,\n",
+        "        monitor=f\"val_{comparison_metric.name}\",\n",
+        "        mode='max',\n",
+        "        save_best_only=False)\n",
+        "log_csv = CSVLogger(\"/content/drive/MyDrive/WeightsCifar10/mylogs6.csv\", separator = \",\", append = False)\n",
+        "callback_list = [model_checkpoint_callback, model_checkpoint_callback2, log_csv]"
+      ],
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lTc4wjtccfQ8",
+        "outputId": "aeeec9f8-7240-4b97-da09-5571f912ac19",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "m6 = Model.build()\n",
+        "m6.load_weights(\"/content/drive/MyDrive/WeightsCifar10/latest_weights5.hdf5\")\n",
+        "m6.compile(optimizer='adam', loss=MarginLoss(), metrics=[comparison_metric])\n",
+        "history = m6.fit(x_train, y_train, batch_size=32, epochs=50, verbose= 1, validation_split=0.2, callbacks = callback_list )"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/50\n",
+            "1250/1250 [==============================] - 475s 364ms/step - loss: 2.2798 - my_accuracy: 0.5026 - val_loss: 2.2779 - val_my_accuracy: 0.4792\n",
+            "Epoch 2/50\n",
+            "1250/1250 [==============================] - 454s 364ms/step - loss: 2.2798 - my_accuracy: 0.4967 - val_loss: 2.2778 - val_my_accuracy: 0.4761\n",
+            "Epoch 3/50\n",
+            "1250/1250 [==============================] - 453s 363ms/step - loss: 2.2798 - my_accuracy: 0.4854 - val_loss: 2.2778 - val_my_accuracy: 0.4726\n",
+            "Epoch 4/50\n",
+            "1250/1250 [==============================] - 454s 363ms/step - loss: 2.2797 - my_accuracy: 0.4961 - val_loss: 2.2779 - val_my_accuracy: 0.4639\n",
+            "Epoch 5/50\n",
+            "1250/1250 [==============================] - 453s 363ms/step - loss: 2.2798 - my_accuracy: 0.4958 - val_loss: 2.2778 - val_my_accuracy: 0.4433\n",
+            "Epoch 6/50\n",
+            "1250/1250 [==============================] - 453s 362ms/step - loss: 2.2798 - my_accuracy: 0.5104 - val_loss: 2.2779 - val_my_accuracy: 0.4892\n",
+            "Epoch 7/50\n",
+            "1250/1250 [==============================] - 454s 363ms/step - loss: 2.2797 - my_accuracy: 0.4955 - val_loss: 2.2778 - val_my_accuracy: 0.5100\n",
+            "Epoch 8/50\n",
+            "1250/1250 [==============================] - 453s 363ms/step - loss: 2.2797 - my_accuracy: 0.5006 - val_loss: 2.2779 - val_my_accuracy: 0.4891\n",
+            "Epoch 9/50\n",
+            "1250/1250 [==============================] - 453s 363ms/step - loss: 2.2798 - my_accuracy: 0.5034 - val_loss: 2.2778 - val_my_accuracy: 0.4863\n",
+            "Epoch 10/50\n",
+            "1250/1250 [==============================] - 453s 362ms/step - loss: 2.2797 - my_accuracy: 0.5022 - val_loss: 2.2781 - val_my_accuracy: 0.4508\n",
+            "Epoch 11/50\n",
+            "1250/1250 [==============================] - 453s 363ms/step - loss: 2.2798 - my_accuracy: 0.4940 - val_loss: 2.2777 - val_my_accuracy: 0.4707\n",
+            "Epoch 12/50\n",
+            "1250/1250 [==============================] - 480s 384ms/step - loss: 2.2798 - my_accuracy: 0.5164 - val_loss: 2.2779 - val_my_accuracy: 0.4493\n",
+            "Epoch 13/50\n",
+            "1250/1250 [==============================] - 453s 362ms/step - loss: 2.2798 - my_accuracy: 0.5014 - val_loss: 2.2779 - val_my_accuracy: 0.5177\n",
+            "Epoch 14/50\n",
+            "1250/1250 [==============================] - 453s 363ms/step - loss: 2.2798 - my_accuracy: 0.5114 - val_loss: 2.2779 - val_my_accuracy: 0.4217\n",
+            "Epoch 15/50\n",
+            "1250/1250 [==============================] - 453s 362ms/step - loss: 2.2798 - my_accuracy: 0.5146 - val_loss: 2.2778 - val_my_accuracy: 0.5164\n",
+            "Epoch 16/50\n",
+            "1250/1250 [==============================] - 453s 363ms/step - loss: 2.2798 - my_accuracy: 0.5131 - val_loss: 2.2778 - val_my_accuracy: 0.4604\n",
+            "Epoch 17/50\n",
+            "1250/1250 [==============================] - 453s 363ms/step - loss: 2.2798 - my_accuracy: 0.5094 - val_loss: 2.2778 - val_my_accuracy: 0.4877\n",
+            "Epoch 18/50\n",
+            "1250/1250 [==============================] - 454s 363ms/step - loss: 2.2797 - my_accuracy: 0.4992 - val_loss: 2.2778 - val_my_accuracy: 0.5020\n",
+            "Epoch 19/50\n",
+            "1250/1250 [==============================] - 454s 363ms/step - loss: 2.2797 - my_accuracy: 0.5280 - val_loss: 2.2778 - val_my_accuracy: 0.4521\n",
+            "Epoch 20/50\n",
+            "1250/1250 [==============================] - 453s 363ms/step - loss: 2.2798 - my_accuracy: 0.5081 - val_loss: 2.2779 - val_my_accuracy: 0.4836\n",
+            "Epoch 21/50\n",
+            "1250/1250 [==============================] - 453s 363ms/step - loss: 2.2798 - my_accuracy: 0.5075 - val_loss: 2.2779 - val_my_accuracy: 0.4940\n",
+            "Epoch 22/50\n",
+            "1250/1250 [==============================] - 454s 363ms/step - loss: 2.2798 - my_accuracy: 0.5134 - val_loss: 2.2777 - val_my_accuracy: 0.5064\n",
+            "Epoch 23/50\n",
+            "1250/1250 [==============================] - 454s 363ms/step - loss: 2.2798 - my_accuracy: 0.5159 - val_loss: 2.2778 - val_my_accuracy: 0.4982\n",
+            "Epoch 24/50\n",
+            "1250/1250 [==============================] - 453s 363ms/step - loss: 2.2798 - my_accuracy: 0.5080 - val_loss: 2.2778 - val_my_accuracy: 0.4872\n",
+            "Epoch 25/50\n",
+            "1250/1250 [==============================] - 452s 362ms/step - loss: 2.2797 - my_accuracy: 0.5092 - val_loss: 2.2780 - val_my_accuracy: 0.4708\n",
+            "Epoch 26/50\n",
+            "1250/1250 [==============================] - 453s 362ms/step - loss: 2.2798 - my_accuracy: 0.5341 - val_loss: 2.2781 - val_my_accuracy: 0.4600\n",
+            "Epoch 27/50\n",
+            "1250/1250 [==============================] - 452s 362ms/step - loss: 2.2798 - my_accuracy: 0.5090 - val_loss: 2.2780 - val_my_accuracy: 0.4616\n",
+            "Epoch 28/50\n",
+            "1250/1250 [==============================] - 452s 362ms/step - loss: 2.2798 - my_accuracy: 0.5242 - val_loss: 2.2779 - val_my_accuracy: 0.5087\n",
+            "Epoch 29/50\n",
+            "1250/1250 [==============================] - 453s 362ms/step - loss: 2.2798 - my_accuracy: 0.5156 - val_loss: 2.2778 - val_my_accuracy: 0.5283\n",
+            "Epoch 30/50\n",
+            "1250/1250 [==============================] - 453s 363ms/step - loss: 2.2798 - my_accuracy: 0.5250 - val_loss: 2.2778 - val_my_accuracy: 0.4900\n",
+            "Epoch 31/50\n",
+            "1250/1250 [==============================] - 453s 362ms/step - loss: 2.2798 - my_accuracy: 0.5309 - val_loss: 2.2779 - val_my_accuracy: 0.4998\n",
+            "Epoch 32/50\n",
+            "1250/1250 [==============================] - 453s 363ms/step - loss: 2.2798 - my_accuracy: 0.5216 - val_loss: 2.2777 - val_my_accuracy: 0.5316\n",
+            "Epoch 33/50\n",
+            "1250/1250 [==============================] - 453s 363ms/step - loss: 2.2797 - my_accuracy: 0.5145 - val_loss: 2.2778 - val_my_accuracy: 0.4918\n",
+            "Epoch 34/50\n",
+            "1250/1250 [==============================] - 453s 363ms/step - loss: 2.2798 - my_accuracy: 0.5221 - val_loss: 2.2778 - val_my_accuracy: 0.4731\n",
+            "Epoch 35/50\n",
+            "1250/1250 [==============================] - 453s 363ms/step - loss: 2.2798 - my_accuracy: 0.5173 - val_loss: 2.2780 - val_my_accuracy: 0.4814\n",
+            "Epoch 36/50\n",
+            "1250/1250 [==============================] - 453s 362ms/step - loss: 2.2797 - my_accuracy: 0.5170 - val_loss: 2.2777 - val_my_accuracy: 0.5187\n",
+            "Epoch 37/50\n",
+            "1250/1250 [==============================] - 452s 362ms/step - loss: 2.2798 - my_accuracy: 0.5237 - val_loss: 2.2778 - val_my_accuracy: 0.4946\n",
+            "Epoch 38/50\n",
+            "1250/1250 [==============================] - 453s 362ms/step - loss: 2.2797 - my_accuracy: 0.5092 - val_loss: 2.2778 - val_my_accuracy: 0.5009\n",
+            "Epoch 39/50\n",
+            "1250/1250 [==============================] - 453s 363ms/step - loss: 2.2797 - my_accuracy: 0.5186 - val_loss: 2.2778 - val_my_accuracy: 0.4912\n",
+            "Epoch 40/50\n",
+            "1250/1250 [==============================] - 453s 362ms/step - loss: 2.2797 - my_accuracy: 0.5333 - val_loss: 2.2779 - val_my_accuracy: 0.4982\n",
+            "Epoch 41/50\n",
+            "1250/1250 [==============================] - 453s 362ms/step - loss: 2.2797 - my_accuracy: 0.5175 - val_loss: 2.2779 - val_my_accuracy: 0.5076\n",
+            "Epoch 42/50\n",
+            "1250/1250 [==============================] - 453s 362ms/step - loss: 2.2798 - my_accuracy: 0.5309 - val_loss: 2.2779 - val_my_accuracy: 0.4658\n",
+            "Epoch 43/50\n",
+            "1250/1250 [==============================] - 453s 362ms/step - loss: 2.2798 - my_accuracy: 0.5258 - val_loss: 2.2778 - val_my_accuracy: 0.5131\n",
+            "Epoch 44/50\n",
+            "1250/1250 [==============================] - 454s 363ms/step - loss: 2.2797 - my_accuracy: 0.5407 - val_loss: 2.2778 - val_my_accuracy: 0.4895\n",
+            "Epoch 45/50\n",
+            "1250/1250 [==============================] - 453s 363ms/step - loss: 2.2798 - my_accuracy: 0.5358 - val_loss: 2.2778 - val_my_accuracy: 0.5277\n",
+            "Epoch 46/50\n",
+            "1250/1250 [==============================] - 453s 362ms/step - loss: 2.2797 - my_accuracy: 0.5322 - val_loss: 2.2778 - val_my_accuracy: 0.5119\n",
+            "Epoch 47/50\n",
+            "1250/1250 [==============================] - 452s 362ms/step - loss: 2.2798 - my_accuracy: 0.5336 - val_loss: 2.2778 - val_my_accuracy: 0.5065\n",
+            "Epoch 48/50\n",
+            "1250/1250 [==============================] - 453s 362ms/step - loss: 2.2797 - my_accuracy: 0.5315 - val_loss: 2.2781 - val_my_accuracy: 0.4418\n",
+            "Epoch 49/50\n",
+            "1250/1250 [==============================] - 453s 362ms/step - loss: 2.2797 - my_accuracy: 0.5224 - val_loss: 2.2779 - val_my_accuracy: 0.4578\n",
+            "Epoch 50/50\n",
+            "1250/1250 [==============================] - 453s 362ms/step - loss: 2.2798 - my_accuracy: 0.5357 - val_loss: 2.2778 - val_my_accuracy: 0.5222\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "LWY2uum33jgL"
       },
       "source": [
         "import pickle\n",
-        "with open('/content/drive/MyDrive/WeightsCifar10/history_round5_ep50', 'wb') as file_pi:\n",
+        "with open('/content/drive/MyDrive/WeightsCifar10/history_round6_ep50', 'wb') as file_pi:\n",
         "  pickle.dump(history.history, file_pi)"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     }
   ]
