--- a/c_mnistTf2Normalized.ipynb
+++ b/c_mnistTf2Normalized.ipynb
@@ -839,7 +839,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d5Vm_QpbUry8",
-        "outputId": "7fffe10b-4b87-4d3f-9296-b69b7dc576cb"
+        "outputId": "09d0d3c3-1da8-4ea8-8479-6f491f1c7ea4"
       },
       "source": [
         "mm = K.models.load_model('/content/drive/MyDrive/WeightsMnist/save.tf',\\\n",
@@ -852,9 +852,25 @@
         "                              \"MyAccuracy\": MyAccuracy,\\\n",
         "                              \"MarginLoss\": MarginLoss,\\\n",
         "                          })\n",
-        "print(type(mm), mm.summary())"
+        "print(type(mm), mm.summary())\n",
+        "print(mm.weights[0][0][0][0][0:5])\n",
+        "e = mm.load_weights('/content/drive/MyDrive/WeightsMnist/latest_weights1.hdf5')\n",
+        "print(mm.weights[0][0][0][0][0:5])\n",
+        "\n",
+        "\n",
+        "# Create the .tflite file\n",
+        "tflite_model_file = \"/content/drive/MyDrive/WeightsMnist/compressed.tflite\"\n",
+        "converter = tf.lite.TFLiteConverter.from_keras_model(mm)\n",
+        "converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
+        "converter.target_spec.supported_ops = [\n",
+        "  tf.lite.OpsSet.TFLITE_BUILTINS, # enable TensorFlow Lite ops.\n",
+        "  tf.lite.OpsSet.SELECT_TF_OPS # enable TensorFlow ops.\n",
+        "]\n",
+        "tflite_model = converter.convert()\n",
+        "with open(tflite_model_file, \"wb\") as f:\n",
+        "    f.write(tflite_model)"
       ],
-      "execution_count": 17,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -881,9 +897,19 @@
             "Trainable params: 6,815,744\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n",
-            "<class 'tensorflow.python.keras.engine.functional.Functional'> None\n"
+            "<class 'tensorflow.python.keras.engine.functional.Functional'> None\n",
+            "tf.Tensor([-0.01821406 -0.02564497 -0.05699345 -0.01358504 -0.01916237], shape=(5,), dtype=float32)\n",
+            "tf.Tensor([ 0.06499811 -0.099627   -1.0019162  -0.53550017 -0.03201126], shape=(5,), dtype=float32)\n",
+            "INFO:tensorflow:Assets written to: /tmp/tmpqyl69uck/assets\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Assets written to: /tmp/tmpqyl69uck/assets\n"
+          ],
+          "name": "stderr"
         }
       ]
     },
@@ -899,7 +925,48 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eVrB1GkTFItQ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eVrB1GkTFItQ",
+        "outputId": "03fe35c9-ab59-4f96-848c-7fdc97f6f0d6"
+      },
+      "source": [
+        "!du -sh /content/drive/MyDrive/WeightsMnist/*\n"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "27M\t/content/drive/MyDrive/WeightsMnist/11_latest_weights1.hdf5\n",
+            "512\t/content/drive/MyDrive/WeightsMnist/11_mylogs1.csv\n",
+            "11M\t/content/drive/MyDrive/WeightsMnist/compressed.tflite\n",
+            "27M\t/content/drive/MyDrive/WeightsMnist/latest_weights1.hdf5\n",
+            "5.5K\t/content/drive/MyDrive/WeightsMnist/mylogs1.csv\n",
+            "1.0K\t/content/drive/MyDrive/WeightsMnist/save.h5\n",
+            "79M\t/content/drive/MyDrive/WeightsMnist/save.tf\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cTzAAQHpL51b"
+      },
+      "source": [
+        "# Use this tutorial for pruning\n",
+        "quantization has already been done earlier\n",
+        "\n",
+        "https://www.tensorflow.org/model_optimization/guide/pruning/pruning_with_keras\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aJLicHf3J1G-"
       },
       "source": [
         ""
