quantization now works - pruning remains to be done

--- a/c_mnistTf2Normalized.ipynb
+++ b/c_mnistTf2Normalized.ipynb
@@ -839,7 +839,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d5Vm_QpbUry8",
-        "outputId": "09d0d3c3-1da8-4ea8-8479-6f491f1c7ea4"
+        "outputId": "0ed2fc82-702e-415e-a578-21da15a79b43"
       },
       "source": [
         "mm = K.models.load_model('/content/drive/MyDrive/WeightsMnist/save.tf',\\\n",
@@ -862,15 +862,17 @@
         "tflite_model_file = \"/content/drive/MyDrive/WeightsMnist/compressed.tflite\"\n",
         "converter = tf.lite.TFLiteConverter.from_keras_model(mm)\n",
         "converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
+        "\n",
         "converter.target_spec.supported_ops = [\n",
         "  tf.lite.OpsSet.TFLITE_BUILTINS, # enable TensorFlow Lite ops.\n",
         "  tf.lite.OpsSet.SELECT_TF_OPS # enable TensorFlow ops.\n",
         "]\n",
+        "\n",
         "tflite_model = converter.convert()\n",
         "with open(tflite_model_file, \"wb\") as f:\n",
         "    f.write(tflite_model)"
       ],
-      "execution_count": 32,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -900,14 +902,14 @@
             "<class 'tensorflow.python.keras.engine.functional.Functional'> None\n",
             "tf.Tensor([-0.01821406 -0.02564497 -0.05699345 -0.01358504 -0.01916237], shape=(5,), dtype=float32)\n",
             "tf.Tensor([ 0.06499811 -0.099627   -1.0019162  -0.53550017 -0.03201126], shape=(5,), dtype=float32)\n",
-            "INFO:tensorflow:Assets written to: /tmp/tmpqyl69uck/assets\n"
+            "INFO:tensorflow:Assets written to: /tmp/tmpk_ihts3a/assets\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "INFO:tensorflow:Assets written to: /tmp/tmpqyl69uck/assets\n"
+            "INFO:tensorflow:Assets written to: /tmp/tmpk_ihts3a/assets\n"
           ],
           "name": "stderr"
         }
