--- a/c_mnistTf2Normalized.ipynb
+++ b/c_mnistTf2Normalized.ipynb
@@ -608,7 +608,7 @@
       },
       "source": [
         "m.compile(optimizer='adam', loss=MarginLoss(), metrics=[MyAccuracy()])\n",
-        "#history = m.fit(x_train, y_train, batch_size=32, epochs=2, verbose= 1, validation_split=0.2, callbacks = callback_list)\n"
+        "history = m.fit(x_train, y_train, batch_size=32, epochs=2, verbose= 1, validation_split=0.2, callbacks = callback_list)\n"
       ],
       "execution_count": 15,
       "outputs": []
@@ -714,54 +714,120 @@
         "                                     keepdims=keep_dims)\n",
         "      return tf.sqrt(squared_norm + epsilon)\n",
         "\n",
-        "    \n",
-        "\n",
         "    def call(self,y_pred):\n",
-        "      # print(f\"y_true.shape = {y_true.shape}, y_pred.shape = {y_pred.shape}\")\n",
-        "      # return K.losses.MeanSquaredError()(y_true, y_pred)\n",
-        "\n",
-        "      #y_true = K.Input(shape=[], dtype=tf.int64, name=\"y\")\n",
-        "      \n",
-        "      #y_true one hot encode y_train\n",
-        "      print(\"input shape\", y_pred.shape, y_pred.dtype)\n",
-        "      \n",
-        "      #y_proba = self.safe_norm(y_pred, keep_dims = True)\n",
         "      y_proba = self.safe_norm(y_pred, axis=-2)\n",
-        "      print(\"after safe norm\", y_proba.shape)\n",
         "      y_proba_argmax = tf.argmax(y_proba, axis=2)\n",
-        "      print(\"after argmax\", y_proba_argmax.shape)\n",
         "      y_pred = tf.squeeze(y_proba_argmax, axis=[1,2], name=\"y_pred\")\n",
-        "      #y_pred = tf.cast(y_pred, dtype= tf.uint8)\n",
-        "      print(\"output shape after squuze\", y_pred, y_pred.dtype )\n",
-        "      print(y_pred.dtype)\n",
-        "\n",
         "      return y_pred\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "R3s5KL2po5FN"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R3s5KL2po5FN",
+        "outputId": "b596dfb9-e99a-4612-d596-90ac73cb004b"
       },
       "source": [
-        "y_test = tf.cast(y_test, dtype= tf.int64)"
+        "y_test = tf.cast(y_test, dtype= tf.int64)\n",
+        "print(y_test.shape)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(10000,)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8cJcH3YlsAVt"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 816
+        },
+        "id": "8cJcH3YlsAVt",
+        "outputId": "0b4f9bca-a978-4fc8-8fda-d13e76db066c"
       },
       "source": [
-        ""
+        "m = Model.build()\n",
+        "m.load_weights('/content/drive/MyDrive/WeightsMnist/latest_weights1.hdf5')\n",
+        "m.compile(optimizer='Adam', loss=MarginLoss)\n",
+        "newmodel = K.models.Sequential(\\\n",
+        "            [\\\n",
+        "             m,\\\n",
+        "             DimensionCorrection(),\\\n",
+        "            ]\\\n",
+        ")\n",
+        "newmodel.summary()\n",
+        "m.trainable = False\n",
+        "newmodel.compile(optimizer='adam')\n",
+        "\n",
+        "y_pred = newmodel.predict(x_test)\n",
+        "\n",
+        "import sklearn\n",
+        "from sklearn.metrics import confusion_matrix, accuracy_score, roc_auc_score\n",
+        "print(confusion_matrix(y_test, y_pred))\n",
+        "print(f\"accuracy = {accuracy_score(y_test, y_pred)}\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "initial y_pred = (None, 1, 10, 16, 1)\n",
+            "final y_pred = (None,)\n",
+            "Model: \"sequential_18\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "my (Functional)              (None, 1, 10, 16, 1)      6815744   \n",
+            "_________________________________________________________________\n",
+            "dimension_correction_19 (Dim (None,)                   0         \n",
+            "=================================================================\n",
+            "Total params: 6,815,744\n",
+            "Trainable params: 6,815,744\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n",
+            "initial y_pred = (None, 1, 10, 16, 1)\n",
+            "final y_pred = (None,)\n",
+            "[[ 961   15    0    0    0    0    3    1    0    0]\n",
+            " [   0 1135    0    0    0    0    0    0    0    0]\n",
+            " [   0   44  977    4    0    0    1    6    0    0]\n",
+            " [   0    1    0 1005    0    1    0    3    0    0]\n",
+            " [   0  189    0    0  785    0    6    0    0    2]\n",
+            " [   0   48    0   19    0  818    6    1    0    0]\n",
+            " [   1   12    0    0    0    0  945    0    0    0]\n",
+            " [   0   16    2    1    0    0    0 1009    0    0]\n",
+            " [   0   48    0    6    0    0    2    2  914    2]\n",
+            " [   2   55    0    6    0    0    1    3    0  942]]\n",
+            "accuracy = 0.9491\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-62-88302dc22f86>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfusion_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"accuracy = {accuracy_score(y_test, y_pred)}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mxx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0myy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroc_curve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0myy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sklearn/metrics/_ranking.py\u001b[0m in \u001b[0;36mroc_curve\u001b[0;34m(y_true, y_score, pos_label, sample_weight, drop_intermediate)\u001b[0m\n\u001b[1;32m    769\u001b[0m     \"\"\"\n\u001b[1;32m    770\u001b[0m     fps, tps, thresholds = _binary_clf_curve(\n\u001b[0;32m--> 771\u001b[0;31m         y_true, y_score, pos_label=pos_label, sample_weight=sample_weight)\n\u001b[0m\u001b[1;32m    772\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    773\u001b[0m     \u001b[0;31m# Attempt to drop thresholds corresponding to points in between and\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sklearn/metrics/_ranking.py\u001b[0m in \u001b[0;36m_binary_clf_curve\u001b[0;34m(y_true, y_score, pos_label, sample_weight)\u001b[0m\n\u001b[1;32m    534\u001b[0m     if not (y_type == \"binary\" or\n\u001b[1;32m    535\u001b[0m             (y_type == \"multiclass\" and pos_label is not None)):\n\u001b[0;32m--> 536\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{0} format is not supported\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_type\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    537\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    538\u001b[0m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: multiclass format is not supported"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -776,7 +842,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
     },
     {
