--- a/a_cifarTf2.ipynb
+++ b/a_cifarTf2.ipynb
@@ -99,7 +99,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OHXF8jiBh8kH",
-        "outputId": "3ba73dab-c2e6-4909-a8fa-8a2a4d4bc0ca"
+        "outputId": "5599eeff-7873-4b31-8d65-09b0e58dd416"
       },
       "source": [
         "from google.colab import drive\n",
@@ -137,7 +137,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5eagecphv4k_",
-        "outputId": "b94c3bd2-d077-4635-bcc4-467042482a28"
+        "outputId": "f1ab4d82-1e03-40c1-c076-aae6ea826928"
       },
       "source": [
         "(x_train, y_train), (x_test, y_test) = K.datasets.cifar10.load_data()"
@@ -148,7 +148,7 @@
           "output_type": "stream",
           "text": [
             "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
-            "170500096/170498071 [==============================] - 6s 0us/step\n"
+            "170500096/170498071 [==============================] - 4s 0us/step\n"
           ],
           "name": "stdout"
         }
@@ -423,7 +423,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UnmSudqTMlPX",
-        "outputId": "5ef33da5-3e18-452f-e76c-f851e1e9a275"
+        "outputId": "4e167f8a-0fa6-4d91-ae47-080552cea681"
       },
       "source": [
         "class Model:\n",
@@ -1309,11 +1309,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ysLVm6lWdUjD",
-        "outputId": "18d89348-b181-45dc-8a2c-679fe36c9afc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ysLVm6lWdUjD",
+        "outputId": "18d89348-b181-45dc-8a2c-679fe36c9afc"
       },
       "source": [
         "m7 = Model.build()\n",
@@ -1434,11 +1434,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iYV9RLoM26JT",
-        "outputId": "dbee5510-085f-4ae6-d5cd-b3c07f3d5ec6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iYV9RLoM26JT",
+        "outputId": "dbee5510-085f-4ae6-d5cd-b3c07f3d5ec6"
       },
       "source": [
         "m8 = Model.build()\n",
@@ -1525,38 +1525,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eBZ812MLhXQl"
-      },
-      "source": [
-        "from keras.callbacks import ModelCheckpoint, CSVLogger\n",
-        "comparison_metric = MyAccuracy()\n",
-        "#checkpoint_filepath = \"/content/drive/MyDrive/Weights/weights-improvement-{epoch:02d}-{val_my_accuracy:.2f}.hdf5\"\n",
-        "model_checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(\n",
-        "        filepath = \"/content/drive/MyDrive/WeightsCifar10/best_weights9.hdf5\",\n",
-        "        save_weights_only=True,\n",
-        "        monitor=f\"val_{comparison_metric.name}\",\n",
-        "        mode='max',\n",
-        "        save_best_only=True)\n",
-        "model_checkpoint_callback2 = tf.keras.callbacks.ModelCheckpoint(\n",
-        "        filepath = \"/content/drive/MyDrive/WeightsCifar10/latest_weights9.hdf5\",\n",
-        "        save_weights_only=True,\n",
-        "        monitor=f\"val_{comparison_metric.name}\",\n",
-        "        mode='max',\n",
-        "        save_best_only=False)\n",
-        "log_csv = CSVLogger(\"/content/drive/MyDrive/WeightsCifar10/mylogs9.csv\", separator = \",\", append = False)\n",
-        "callback_list = [model_checkpoint_callback, model_checkpoint_callback2, log_csv]"
-      ],
-      "execution_count": 14,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "YZyMwM8ohu6w",
-        "outputId": "64beb08a-048b-433c-e14d-b359c457f18f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YZyMwM8ohu6w",
+        "outputId": "64beb08a-048b-433c-e14d-b359c457f18f"
       },
       "source": [
         "m9 = Model.build()\n",
@@ -1639,11 +1612,218 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "5N7xzVU-T_gI",
+        "outputId": "46d829a6-59ac-4c87-e82b-22c4d84e84cb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "m10 = Model.build()\n",
+        "m10.load_weights(\"/content/drive/MyDrive/WeightsCifar10/latest_weights9.hdf5\")\n",
+        "m10.compile(optimizer='adam', loss=MarginLoss(), metrics=[comparison_metric])\n",
+        "history = m10.fit(x_train, y_train, batch_size=32, epochs=50, verbose= 1, validation_split=0.2, callbacks = callback_list )"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/50\n",
+            "1250/1250 [==============================] - 469s 359ms/step - loss: 2.2796 - my_accuracy: 0.5961 - val_loss: 2.2778 - val_my_accuracy: 0.5445\n",
+            "Epoch 2/50\n",
+            "1250/1250 [==============================] - 448s 359ms/step - loss: 2.2796 - my_accuracy: 0.5893 - val_loss: 2.2777 - val_my_accuracy: 0.5613\n",
+            "Epoch 3/50\n",
+            "1250/1250 [==============================] - 447s 358ms/step - loss: 2.2796 - my_accuracy: 0.5797 - val_loss: 2.2777 - val_my_accuracy: 0.5329\n",
+            "Epoch 4/50\n",
+            "1250/1250 [==============================] - 446s 357ms/step - loss: 2.2796 - my_accuracy: 0.5867 - val_loss: 2.2778 - val_my_accuracy: 0.5312\n",
+            "Epoch 5/50\n",
+            "1250/1250 [==============================] - 446s 356ms/step - loss: 2.2796 - my_accuracy: 0.5927 - val_loss: 2.2777 - val_my_accuracy: 0.5090\n",
+            "Epoch 6/50\n",
+            "1250/1250 [==============================] - 446s 357ms/step - loss: 2.2796 - my_accuracy: 0.6050 - val_loss: 2.2778 - val_my_accuracy: 0.5643\n",
+            "Epoch 7/50\n",
+            "1250/1250 [==============================] - 445s 356ms/step - loss: 2.2796 - my_accuracy: 0.5916 - val_loss: 2.2778 - val_my_accuracy: 0.5702\n",
+            "Epoch 8/50\n",
+            "1250/1250 [==============================] - 444s 355ms/step - loss: 2.2796 - my_accuracy: 0.5903 - val_loss: 2.2778 - val_my_accuracy: 0.5578\n",
+            "Epoch 9/50\n",
+            "1250/1250 [==============================] - 443s 355ms/step - loss: 2.2796 - my_accuracy: 0.6002 - val_loss: 2.2778 - val_my_accuracy: 0.5560\n",
+            "Epoch 10/50\n",
+            "1250/1250 [==============================] - 444s 355ms/step - loss: 2.2796 - my_accuracy: 0.6021 - val_loss: 2.2780 - val_my_accuracy: 0.5286\n",
+            "Epoch 11/50\n",
+            "1250/1250 [==============================] - 444s 355ms/step - loss: 2.2796 - my_accuracy: 0.5892 - val_loss: 2.2777 - val_my_accuracy: 0.5399\n",
+            "Epoch 12/50\n",
+            "1250/1250 [==============================] - 443s 355ms/step - loss: 2.2796 - my_accuracy: 0.6091 - val_loss: 2.2778 - val_my_accuracy: 0.5484\n",
+            "Epoch 13/50\n",
+            "1250/1250 [==============================] - 444s 355ms/step - loss: 2.2796 - my_accuracy: 0.5999 - val_loss: 2.2778 - val_my_accuracy: 0.5817\n",
+            "Epoch 14/50\n",
+            "1250/1250 [==============================] - 444s 355ms/step - loss: 2.2796 - my_accuracy: 0.6084 - val_loss: 2.2778 - val_my_accuracy: 0.5211\n",
+            "Epoch 15/50\n",
+            "1250/1250 [==============================] - 443s 354ms/step - loss: 2.2796 - my_accuracy: 0.6078 - val_loss: 2.2777 - val_my_accuracy: 0.5654\n",
+            "Epoch 16/50\n",
+            "1250/1250 [==============================] - 442s 353ms/step - loss: 2.2796 - my_accuracy: 0.6086 - val_loss: 2.2777 - val_my_accuracy: 0.5408\n",
+            "Epoch 17/50\n",
+            "1250/1250 [==============================] - 442s 354ms/step - loss: 2.2796 - my_accuracy: 0.6031 - val_loss: 2.2777 - val_my_accuracy: 0.5708\n",
+            "Epoch 18/50\n",
+            "1250/1250 [==============================] - 470s 376ms/step - loss: 2.2796 - my_accuracy: 0.5960 - val_loss: 2.2777 - val_my_accuracy: 0.5764\n",
+            "Epoch 19/50\n",
+            "1250/1250 [==============================] - 442s 354ms/step - loss: 2.2796 - my_accuracy: 0.6184 - val_loss: 2.2778 - val_my_accuracy: 0.5413\n",
+            "Epoch 20/50\n",
+            "1250/1250 [==============================] - 442s 353ms/step - loss: 2.2796 - my_accuracy: 0.6015 - val_loss: 2.2778 - val_my_accuracy: 0.5551\n",
+            "Epoch 21/50\n",
+            "1250/1250 [==============================] - 442s 353ms/step - loss: 2.2796 - my_accuracy: 0.6008 - val_loss: 2.2778 - val_my_accuracy: 0.5697\n",
+            "Epoch 22/50\n",
+            " 658/1250 [==============>...............] - ETA: 3:04 - loss: 2.2796 - my_accuracy: 0.6031"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eBZ812MLhXQl"
+      },
+      "source": [
+        "from keras.callbacks import ModelCheckpoint, CSVLogger\n",
+        "comparison_metric = MyAccuracy()\n",
+        "#checkpoint_filepath = \"/content/drive/MyDrive/Weights/weights-improvement-{epoch:02d}-{val_my_accuracy:.2f}.hdf5\n",
+        "model_checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(\n",
+        "        filepath = \"/content/drive/MyDrive/WeightsCifar10/best_weights11.hdf5\",\n",
+        "        save_weights_only=True,\n",
+        "        monitor=f\"val_{comparison_metric.name}\",\n",
+        "        mode='max',\n",
+        "        save_best_only=True)\n",
+        "model_checkpoint_callback2 = tf.keras.callbacks.ModelCheckpoint(\n",
+        "        filepath = \"/content/drive/MyDrive/WeightsCifar10/latest_weights11.hdf5\",\n",
+        "        save_weights_only=True,\n",
+        "        monitor=f\"val_{comparison_metric.name}\",\n",
+        "        mode='max',\n",
+        "        save_best_only=False)\n",
+        "log_csv = CSVLogger(\"/content/drive/MyDrive/WeightsCifar10/mylogs11.csv\", separator = \",\", append = False)\n",
+        "callback_list = [model_checkpoint_callback, model_checkpoint_callback2, log_csv]"
+      ],
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wtlCRRmLUc_s",
+        "outputId": "4799864a-1261-4d0a-cb2a-7123e015b406",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "m11 = Model.build()\n",
+        "m11.load_weights(\"/content/drive/MyDrive/WeightsCifar10/latest_weights10.hdf5\")\n",
+        "m11.compile(optimizer='adam', loss=MarginLoss(), metrics=[comparison_metric])\n",
+        "history = m11.fit(x_train, y_train, batch_size=32, epochs=50, verbose= 1, validation_split=0.2, callbacks = callback_list )"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/50\n",
+            "1250/1250 [==============================] - 472s 361ms/step - loss: 2.2796 - my_accuracy: 0.6100 - val_loss: 2.2778 - val_my_accuracy: 0.5587\n",
+            "Epoch 2/50\n",
+            "1250/1250 [==============================] - 443s 355ms/step - loss: 2.2796 - my_accuracy: 0.5997 - val_loss: 2.2777 - val_my_accuracy: 0.5592\n",
+            "Epoch 3/50\n",
+            "1250/1250 [==============================] - 445s 356ms/step - loss: 2.2796 - my_accuracy: 0.5916 - val_loss: 2.2777 - val_my_accuracy: 0.5443\n",
+            "Epoch 4/50\n",
+            "1250/1250 [==============================] - 445s 356ms/step - loss: 2.2796 - my_accuracy: 0.5994 - val_loss: 2.2778 - val_my_accuracy: 0.5489\n",
+            "Epoch 5/50\n",
+            "1250/1250 [==============================] - 446s 357ms/step - loss: 2.2796 - my_accuracy: 0.6048 - val_loss: 2.2777 - val_my_accuracy: 0.5400\n",
+            "Epoch 6/50\n",
+            "1250/1250 [==============================] - 447s 358ms/step - loss: 2.2796 - my_accuracy: 0.6068 - val_loss: 2.2778 - val_my_accuracy: 0.5579\n",
+            "Epoch 7/50\n",
+            "1250/1250 [==============================] - 448s 358ms/step - loss: 2.2795 - my_accuracy: 0.5984 - val_loss: 2.2778 - val_my_accuracy: 0.5784\n",
+            "Epoch 8/50\n",
+            "1250/1250 [==============================] - 447s 358ms/step - loss: 2.2796 - my_accuracy: 0.6001 - val_loss: 2.2779 - val_my_accuracy: 0.5578\n",
+            "Epoch 9/50\n",
+            "1250/1250 [==============================] - 447s 357ms/step - loss: 2.2796 - my_accuracy: 0.6072 - val_loss: 2.2777 - val_my_accuracy: 0.5766\n",
+            "Epoch 10/50\n",
+            "1250/1250 [==============================] - 449s 359ms/step - loss: 2.2795 - my_accuracy: 0.6125 - val_loss: 2.2780 - val_my_accuracy: 0.5303\n",
+            "Epoch 11/50\n",
+            "1250/1250 [==============================] - 445s 356ms/step - loss: 2.2796 - my_accuracy: 0.5944 - val_loss: 2.2777 - val_my_accuracy: 0.5501\n",
+            "Epoch 12/50\n",
+            "1250/1250 [==============================] - 444s 355ms/step - loss: 2.2796 - my_accuracy: 0.6145 - val_loss: 2.2779 - val_my_accuracy: 0.5384\n",
+            "Epoch 13/50\n",
+            "1250/1250 [==============================] - 445s 356ms/step - loss: 2.2796 - my_accuracy: 0.6121 - val_loss: 2.2778 - val_my_accuracy: 0.5842\n",
+            "Epoch 14/50\n",
+            "1250/1250 [==============================] - 445s 356ms/step - loss: 2.2796 - my_accuracy: 0.6163 - val_loss: 2.2778 - val_my_accuracy: 0.5147\n",
+            "Epoch 15/50\n",
+            "1250/1250 [==============================] - 444s 356ms/step - loss: 2.2796 - my_accuracy: 0.6158 - val_loss: 2.2777 - val_my_accuracy: 0.5811\n",
+            "Epoch 16/50\n",
+            "1250/1250 [==============================] - 445s 356ms/step - loss: 2.2796 - my_accuracy: 0.6097 - val_loss: 2.2777 - val_my_accuracy: 0.5472\n",
+            "Epoch 17/50\n",
+            "1250/1250 [==============================] - 445s 356ms/step - loss: 2.2796 - my_accuracy: 0.6108 - val_loss: 2.2777 - val_my_accuracy: 0.5720\n",
+            "Epoch 18/50\n",
+            "1250/1250 [==============================] - 445s 356ms/step - loss: 2.2796 - my_accuracy: 0.6003 - val_loss: 2.2777 - val_my_accuracy: 0.5868\n",
+            "Epoch 19/50\n",
+            "1250/1250 [==============================] - 445s 356ms/step - loss: 2.2796 - my_accuracy: 0.6272 - val_loss: 2.2777 - val_my_accuracy: 0.5482\n",
+            "Epoch 20/50\n",
+            "1250/1250 [==============================] - 444s 355ms/step - loss: 2.2796 - my_accuracy: 0.6090 - val_loss: 2.2778 - val_my_accuracy: 0.5625\n",
+            "Epoch 21/50\n",
+            "1250/1250 [==============================] - 444s 355ms/step - loss: 2.2796 - my_accuracy: 0.6102 - val_loss: 2.2778 - val_my_accuracy: 0.5563\n",
+            "Epoch 22/50\n",
+            "1250/1250 [==============================] - 443s 354ms/step - loss: 2.2796 - my_accuracy: 0.6087 - val_loss: 2.2777 - val_my_accuracy: 0.5830\n",
+            "Epoch 23/50\n",
+            "1250/1250 [==============================] - 443s 354ms/step - loss: 2.2796 - my_accuracy: 0.6192 - val_loss: 2.2778 - val_my_accuracy: 0.5562\n",
+            "Epoch 24/50\n",
+            "1250/1250 [==============================] - 443s 354ms/step - loss: 2.2796 - my_accuracy: 0.6091 - val_loss: 2.2777 - val_my_accuracy: 0.5576\n",
+            "Epoch 25/50\n",
+            "1250/1250 [==============================] - 442s 354ms/step - loss: 2.2796 - my_accuracy: 0.6148 - val_loss: 2.2779 - val_my_accuracy: 0.5474\n",
+            "Epoch 26/50\n",
+            "1250/1250 [==============================] - 443s 355ms/step - loss: 2.2796 - my_accuracy: 0.6237 - val_loss: 2.2779 - val_my_accuracy: 0.5424\n",
+            "Epoch 27/50\n",
+            "1250/1250 [==============================] - 443s 354ms/step - loss: 2.2796 - my_accuracy: 0.6066 - val_loss: 2.2779 - val_my_accuracy: 0.5432\n",
+            "Epoch 28/50\n",
+            "1250/1250 [==============================] - 442s 354ms/step - loss: 2.2797 - my_accuracy: 0.6232 - val_loss: 2.2778 - val_my_accuracy: 0.5705\n",
+            "Epoch 29/50\n",
+            "1250/1250 [==============================] - 442s 354ms/step - loss: 2.2796 - my_accuracy: 0.6126 - val_loss: 2.2777 - val_my_accuracy: 0.5904\n",
+            "Epoch 30/50\n",
+            "1250/1250 [==============================] - 443s 354ms/step - loss: 2.2796 - my_accuracy: 0.6236 - val_loss: 2.2778 - val_my_accuracy: 0.5536\n",
+            "Epoch 31/50\n",
+            "1250/1250 [==============================] - 443s 355ms/step - loss: 2.2796 - my_accuracy: 0.6247 - val_loss: 2.2778 - val_my_accuracy: 0.5563\n",
+            "Epoch 32/50\n",
+            "1250/1250 [==============================] - 445s 356ms/step - loss: 2.2796 - my_accuracy: 0.6156 - val_loss: 2.2777 - val_my_accuracy: 0.5971\n",
+            "Epoch 33/50\n",
+            "1250/1250 [==============================] - 445s 356ms/step - loss: 2.2796 - my_accuracy: 0.6107 - val_loss: 2.2777 - val_my_accuracy: 0.5590\n",
+            "Epoch 34/50\n",
+            "1250/1250 [==============================] - 445s 356ms/step - loss: 2.2797 - my_accuracy: 0.6224 - val_loss: 2.2777 - val_my_accuracy: 0.5658\n",
+            "Epoch 35/50\n",
+            "1250/1250 [==============================] - 444s 356ms/step - loss: 2.2796 - my_accuracy: 0.6085 - val_loss: 2.2779 - val_my_accuracy: 0.5592\n",
+            "Epoch 36/50\n",
+            "1250/1250 [==============================] - 443s 355ms/step - loss: 2.2796 - my_accuracy: 0.6158 - val_loss: 2.2777 - val_my_accuracy: 0.5794\n",
+            "Epoch 37/50\n",
+            "1250/1250 [==============================] - 443s 355ms/step - loss: 2.2796 - my_accuracy: 0.6170 - val_loss: 2.2777 - val_my_accuracy: 0.5638\n",
+            "Epoch 38/50\n",
+            "1250/1250 [==============================] - 445s 356ms/step - loss: 2.2796 - my_accuracy: 0.5996 - val_loss: 2.2778 - val_my_accuracy: 0.5614\n",
+            "Epoch 39/50\n",
+            "1250/1250 [==============================] - 445s 356ms/step - loss: 2.2796 - my_accuracy: 0.6083 - val_loss: 2.2777 - val_my_accuracy: 0.5645\n",
+            "Epoch 40/50\n",
+            "1250/1250 [==============================] - 443s 354ms/step - loss: 2.2796 - my_accuracy: 0.6220 - val_loss: 2.2778 - val_my_accuracy: 0.5530\n",
+            "Epoch 41/50\n",
+            "1250/1250 [==============================] - 442s 354ms/step - loss: 2.2796 - my_accuracy: 0.6077 - val_loss: 2.2778 - val_my_accuracy: 0.5501\n",
+            "Epoch 42/50\n",
+            "1250/1250 [==============================] - 444s 356ms/step - loss: 2.2797 - my_accuracy: 0.6171 - val_loss: 2.2779 - val_my_accuracy: 0.5232\n",
+            "Epoch 43/50\n",
+            " 775/1250 [=================>............] - ETA: 2:28 - loss: 2.2797 - my_accuracy: 0.5996"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "LWY2uum33jgL"
       },
       "source": [
         "import pickle\n",
-        "with open('/content/drive/MyDrive/WeightsCifar10/history_round9_ep50', 'wb') as file_pi:\n",
+        "with open('/content/drive/MyDrive/WeightsCifar10/history_round11_ep50', 'wb') as file_pi:\n",
         "  pickle.dump(history.history, file_pi)"
       ],
       "execution_count": null,
